--- a/WindowsFormsApplication1/AlbionDB.csproj
+++ b/WindowsFormsApplication1/AlbionDB.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D8AD64DD-A28D-4ED8-9C5E-92EE3DD6E720}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
-    <AssemblyName>WindowsFormsApplication1</AssemblyName>
+    <RootNamespace>AlbionAdmin</RootNamespace>
+    <AssemblyName>AlbionAdmin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -77,6 +77,12 @@
     <Compile Include="globalVariable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerStatusForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServerStatusForm.Designer.cs">
+      <DependentUpon>ServerStatusForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -97,7 +103,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ServerStatusForm.resx">
+      <DependentUpon>ServerStatusForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
